--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -233,14 +233,14 @@ ul.alert-dropdown {
 
 /** Side bar - modify hima**/
 
-.side-nav li{
- list-style: none;
+.side-nav li {
+    list-style: none;
 }
 
-.side-nav>li>ul>li>ul>li>ul>li>a:active, .side-nav>li>ul>li>ul>li>ul>li>a:hover,.side-nav>li>ul>li>ul>li>a:hover ,.side-nav>li>ul>li>ul>li>a:active{
+.side-nav>li>ul>li>ul>li>ul>li>a:active, .side-nav>li>ul>li>ul>li>ul>li>a:hover, .side-nav>li>ul>li>ul>li>a:hover, .side-nav>li>ul>li>ul>li>a:active {
     color: #fff;
     background-color: black;
- }
+}
 
 .side-nav>li>ul>li>ul>li>a {
     display: block;
@@ -249,25 +249,22 @@ ul.alert-dropdown {
     color: #999;
 }
 
-
 .side-nav>li>ul>li>ul>li>ul>li>a {
     display: block;
-    padding: 10px 15px 10px 20px;
+    padding: 10px 15px 10px 0px;
     text-decoration: none;
     color: #999;
 }
+
+
 /*
 li {
     list-style: none;
 }*/
 
-
 .navbar-inverse .navbar-brand {
     color: #fff;
 }
-
-
-
 
 .breadcrumb-arrow {
     height: 36px;
@@ -367,4 +364,14 @@ li {
 
 .breadcrumb-arrow li span {
     color: #434a54
+}
+
+.logo {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 40px;
+}
+
+.subTitle{
+  font-size: 10px;
+
 }
