--- a/css/mchemo.css
+++ b/css/mchemo.css
@@ -150,7 +150,7 @@ ul.alert-dropdown {
     color: #999;
 }
 
-.side-nav>li>ul>li>a:hover {
+.side-nav>li>ul>li>a:hover ,.side-nav>li>ul>li.active.open{
     color: #fff;
 }
 
